# Project-builder

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/: streamlit_app.py
apps/pages/: 02_Code_Explorer_and_Exporter.py
structure_builder/: __init__.py  audit.py  cli.py  core.py  groq_openai.py  llm_normalizer.py  sanitize.py
tools/: __init__.py  codefill.py  doc_export.py  file_harvester.py  llm_client.py  llm_utils.py  parsing_utils.py  prestart_codefill.py  project_parser.py  trashcan.py  ui_utils.py  zip_utils.py
