[project]
name = "project-structure-builder"
version = "0.1.0"
description = "Deterministic project scaffolder from LLM dumps with safe Groq/OpenAI backfill."
requires-python = ">=3.10"
dependencies = [
    "streamlit==1.37.1",
    "python-dotenv==1.0.1",
    "openai==1.40.6",
    "black==24.8.0",
    "rich==13.7.1",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[project.scripts]
psb = "structure_builder.cli:main"
